[gd_scene load_steps=7 format=3 uid="uid://efjgw673wkm7"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_utle7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_snhiw"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ymaar"]
albedo_color = Color(1, 0.141176, 0.184314, 1)

[sub_resource type="BoxMesh" id="BoxMesh_oo444"]
material = SubResource("StandardMaterial3D_ymaar")

[sub_resource type="SphereShape3D" id="SphereShape3D_8hev4"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tdjsa"]

[node name="enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_utle7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_snhiw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("BoxMesh_oo444")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 3.0
path_height_offset = 0.5
avoidance_enabled = true
radius = 1.0
use_3d_avoidance = true

[node name="enemyHitbox" type="Area3D" parent="."]

[node name="enHBArea" type="CollisionShape3D" parent="enemyHitbox"]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, 0)
shape = SubResource("SphereShape3D_8hev4")

[node name="enAtk" type="OmniLight3D" parent="enemyHitbox/enHBArea"]
light_color = Color(0, 0, 0, 1)
light_energy = 2.0

[node name="detectionArea" type="Area3D" parent="."]

[node name="area" type="CollisionShape3D" parent="detectionArea"]
transform = Transform3D(6.5, 0, 0, 0, 6.5, 0, 0, 0, 6.5, 0, 0, 0)
shape = SubResource("SphereShape3D_tdjsa")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="enemyHitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemyHitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_entered" from="detectionArea" to="." method="_on_detection_area_body_entered"]
